Arreglando fondo Navbar y añadiendo Favicon

--- a/index.html
+++ b/index.html
@@ -11,13 +11,16 @@
 
     <!-- CSS -->
     <link href="./css/style.css" rel="stylesheet">
-    <title>Hello, world!</title>
+    <title>Math For All</title>
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/ico" href="./img/logo.ico"/>
 </head>
 
 <body>
-    <nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark" style="background-color: #000000;">
+    <nav class="navbar sticky-top navbar-expand-lg navbar-dark" style="background-color: #000000;">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">Navbar</a>
+            <a class="navbar-brand" href="#">MFA</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
