--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <!-- Required meta tags -->
@@ -18,23 +18,31 @@
 </head>
 
 <body>
-    <nav class="navbar sticky-top navbar-expand-lg navbar-dark" style="background-color: #000000;">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#">MFA</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                <div class="navbar-nav">
-                    <a class="nav-link active" aria-current="page" href="#">Inicio</a>
-                    <a class="nav-link" href="#">Características</a>
-                    <a class="nav-link" href="#">Precios</a>
-                    <a class="nav-link disabled">Deshabilitado</a>
+    <div class = "nav-container">
+        <nav class="navbar sticky-top navbar-expand-lg navbar-dark" style="background-color: #000000;">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#">
+                    <img src="./img/logo sin bordes MFA.png" width="50" height="55" alt="">
+                </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                    <div class="navbar-nav ms-auto">
+                        <a class="nav-link active" aria-current="page" href="#">Inicio</a>
+                        <!--<a class="nav-link active" aria-current="page" href="#">Inicio</a>-->
+                        <a class="nav-link" href="#">¿Quiénes somos?</a>
+                        <a class="nav-link" href="#">Cursos</a>
+                        <a class="nav-link" href="#">Clasificados Examen de Admision</a>
+                        <a class="nav-link" href="#">Dirección</a>
+                        <!--<a class="nav-link disabled">Deshabilitado</a>-->
+                    </div>
                 </div>
             </div>
-        </div>
-    </nav>
+        </nav>
+    </div>
 
+    
     <div id="title-container">
         <h1 id="title">Math For All</h1>
     </div>
@@ -42,7 +50,7 @@
     <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
             <div class="carousel-item active" data-bs-interval="10000">
-                <img src="./img/photo (1).jpg" class="d-block w-25" alt="...">
+                <img src="./img/photo (1).jpg" class="d-block w-100" alt="...">
             </div>
             <div class="carousel-item" data-bs-interval="2000">
                 <img src="./img/photo (2).jpg" class="d-block w-25" alt="...">
