Se añadio cards

--- a/index.html
+++ b/index.html
@@ -47,6 +47,32 @@
         <h1 id="title">Math For All</h1>
     </div>
 
+    <div class="card-container">
+        <div class="card">
+            <img src="./img/photo (1).jpg" alt="Clases para pimaria">
+            <div class = "card-text">
+                <h4>Clases para primaria</h4>
+                <p>Todos los grados! Dias sábados de 8:00am a 10:00am</p>
+            </div>
+        </div>
+
+        <div class="card">
+            <img src="./img/photo (1).jpg" alt="Clases para pimaria">
+            <div class = "card-text">
+                <h4>Clases para primaria</h4>
+                <p>Todos los grados! Dias sábados de 8:00am a 10:00am</p>
+            </div>
+        </div>
+
+        <div class="card">
+            <img src="./img/photo (1).jpg" alt="Clases para pimaria">
+            <div class = "card-text">
+                <h4>Clases para primaria</h4>
+                <p>Todos los grados! Dias sábados de 8:00am a 10:00am</p>
+            </div>
+        </div>
+    </div>
+
     
       
 
