Estilo de botones

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 <body>
     <div class = "nav-container">
-        <nav class="navbar sticky-top navbar-expand-lg navbar-dark" style="background-color: #000000;">
+        <nav class="navbar sticky navbar-expand-lg navbar-dark" style="background-color: #000000;">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#">
                     <img src="./img/logo sin bordes MFA.png" width="50" height="55" alt="">
@@ -108,9 +108,7 @@
         Nuestro método de enseñanza se diferencia del resto de centros y colegios por que le damos un enfoque diferente a nuestras clases para acercarnos más a cada estudiante.
     </div>
     <div class = "container_btn_equipo">
-        <div class = "btn_body">
-            <a href="equipo.html" class = "btn_equipo">Equipo<a>
-        </div>
+            <a href="equipo.html" class = "btn_estilo">Equipo<a>
     </div>
 
     <!-- Optional JavaScript -->
