--- a/index.html
+++ b/index.html
@@ -101,15 +101,36 @@
     <div class = "container_quienes_somos" id = "section_quienes_somos">
         <img id = "quienes_somos" src="./img/quienes_somos.jpg" alt="Equipo MFA">
     </div>
-    <div class = "QS_text">
+    <div class = "Ptext">
         Somos un centro de entrenamiento donde podrás aprender matemática, física, química, inglés, programación, prepararte para tu examen de admisión y mucho más de una manera fácil y divertida.
     </div>
-    <div class = "QS_text">
+    <div class = "Ptext">
         Nuestro método de enseñanza se diferencia del resto de centros y colegios por que le damos un enfoque diferente a nuestras clases para acercarnos más a cada estudiante.
     </div>
     <div class = "container_btn_equipo">
             <a href="equipo.html" class = "btn_estilo">Equipo<a>
     </div>
+
+
+
+    <!-- Direccion -->
+    <div id="title-container">
+        <h1 id="title">Dirección</h1>
+    </div>
+    <div class = "Ptext">
+        Nos encontramos de donde fue el ranchón de la alcaldía de managua, una cuadra y media al sur.
+    </div>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3900.765995878386!2d-86.29871848518661!3d12.128156991413112!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8f7155f58f83369d%3A0xbc21c9c43f22c520!2sMath%20For%20All!5e0!3m2!1ses!2sni!4v1678113994480!5m2!1ses!2sni" width="100%" height="450" style="border:0; margin: 0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    <div class = "Ptext">
+        Nuestro método de enseñanza se diferencia del resto de centros y colegios por que le damos un enfoque diferente a nuestras clases para acercarnos más a cada estudiante.
+    </div>
+    
+    <!-- Footer -->
+    
+    <div class="footer_container">
+
+    </div>
+
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
