--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
     <!-- CSS -->
     <link href="./css/style.css" rel="stylesheet">
+    <link href="./css/style_s.css" rel="stylesheet">
     <title>Math For All</title>
 
     <!-- Favicon -->
@@ -32,8 +33,8 @@
                         <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
                         <!--<a class="nav-link active" aria-current="page" href="#">Inicio</a>-->
                         <a class="nav-link" href="#section_quienes_somos">¿Quiénes somos?</a>
-                        <a class="nav-link" href="#">Cursos</a>
                         <a class="nav-link" href="#">Dirección</a>
+                        <a class="nav-link" href="cursos.html">Cursos</a>
                         <a class="nav-link" href="#">Clasificados Examen de Admision</a>
                         <!--<a class="nav-link disabled">Deshabilitado</a>-->
                     </div>
@@ -127,7 +128,7 @@
     
     <div class = "footer_container">
         <div class = "footer_main">
-                @Copyrirht
+                Copyrirht @Math For All 2023
         </div>
     </div>
 
