Añadiendo apartado de primaria en cursos.html

--- a/cursos.html
+++ b/cursos.html
@@ -52,15 +52,40 @@
         En Math For All tenemos cursos para todo el que quiera aprender, desde los más pequeños hasta los universitarios!
     </div>
 
+    <!-- Primaria -->
+
     <div class = "Ltitle">
         Primaria
     </div>
 
 
-    <div class="container">
-        <div></div>
-        <div></div>
-        <div></div>
+    <div class="container_primaria">
+        <div class = "horario_primaria">
+            <div class = "title_primaria">
+                Matemáticas
+            </div>
+            <div class = "text_primaria">
+                ¡Clases los fines de semana!
+            </div>
+            <div class = "text_primaria">
+                Sábados de 8:00am a 10:00am
+            </div>
+            
+           <img src="./img/primaria1.jpg" alt="niños de primaria recibiendo clases." class="img_primaria" width="30%"> 
+        </div>
+        <div class = "horario_primaria">
+            <div class = "title_primaria">
+                Inglés y Español
+            </div>
+            <div class = "text_primaria">
+                ¡Clases los días Lunes, Miercoles y Viernes!
+            </div>
+            <div class = "text_primaria">
+                de 2:00pm a 4:00pm
+            </div>
+
+            <img src="./img/primaria2.jpg" alt="niños de primaria recibiendo clases." class="img_primaria" width="30%"> 
+        </div>
       </div>
       
 
