Añadiendo apartado de Secundaria en cursos.html

--- a/cursos.html
+++ b/cursos.html
@@ -87,7 +87,32 @@
             <img src="./img/primaria2.jpg" alt="niños de primaria recibiendo clases." class="img_primaria" width="30%"> 
         </div>
       </div>
-      
+
+      <!-- Secundaria -->
+
+        <div class = "Ltitle">
+            Secundaria
+        </div>
+
+        <div class = "container_secundaria">
+            <div class = "text_secundaria">
+                Clases para secundaria: 
+                <ol>
+                    <li>Matemáticas</li>
+                    <li>Física</li>
+                    <li>Química</li>
+                </ol>
+            </div>
+        </div>
+        <section>
+         <img src="./img/primaria.jpg" alt="">
+         <img src="./img/primaria.jpg" alt="">
+         <img src="./img/primaria.jpg" alt="">
+         <img src="./img/primaria.jpg" alt="">
+         <img src="./img/primaria.jpg" alt="">
+         <img src="./img/primaria.jpg" alt="">
+        </section>
+
 
     
 
