Añadiendo apartado de Examen de admision en cursos.html

--- a/cursos.html
+++ b/cursos.html
@@ -113,6 +113,96 @@
          <img src="./img/primaria.jpg" alt="">
         </section>
 
+        <!-- Secundaria -->
+
+        <div class = "Ltitle">
+                Examen de admisión
+        </div>
+
+        <div class = "container_t2">
+            ¡Te preparamos para tu examen de admisión UNI / UCA!
+        </div>
+
+        <div class = "container_text_uni_uca">
+            <div class = "text_universidad">
+                <div class = "title_universidad">
+                    UNI
+                </div> 
+                <div class = "lista_temas">
+                    <table class=" tabla-temas">
+                        <thead>
+                            <tr>
+                              <th>Temas</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <th>Razonamiento Verbal</th>
+                            </tr>
+                            <tr>
+                                <th>Razonamiento Abstracto</th>
+                            </tr>
+                            <tr>
+                                <th>Razonamiento Numérico</th>
+                            </tr>
+                            <tr>
+                                <th>Razonamiento Espacial</th>
+                            </tr>
+                            <tr>
+                                <th>Razonamiento Lógico</th>
+                            </tr>
+                        </tbody>
+                      </table>
+                </div>   
+            </div>
+            <div class = "text_universidad">
+                <div class = "title_universidad">
+                    UCA
+                </div> 
+                <div class = "lista_temas">
+                    <table class=" tabla-temas">
+                        <thead>
+                            <tr>
+                              <th>Temas</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <th>Matemática Básica</th>
+                            </tr>
+                            <tr>
+                                <th>Proposiciones Lógicas</th>
+                            </tr>
+                            <tr>
+                                <th>Razonamiento Abstracto</th>
+                            </tr>
+                            <tr>
+                                <th>Razonamiento Numérico</th>
+                            </tr>
+                            <tr>
+                                <th>Razonamiento Espacial</th>
+                            </tr>
+                            <tr>
+                                <th>Razonamiento Lógico</th>
+                            </tr>
+                        </tbody>
+                      </table>
+                </div>
+            </div>
+        </div>
+
+        <section>
+            <img src="./img/primaria.jpg" alt="">
+            <img src="./img/primaria.jpg" alt="">
+            <img src="./img/primaria.jpg" alt="">
+            <img src="./img/primaria.jpg" alt="">
+            <img src="./img/primaria.jpg" alt="">
+            <img src="./img/primaria.jpg" alt="">
+        </section>
+
+        <div class = "container_btn_resultados">
+            <a href="clasificados.html" class = "btn_estilo">Ver Resultados!<a>
+        </div>
 
     
 
