--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
     <!-- CSS -->
     <link href="./css/style.css" rel="stylesheet">
@@ -15,17 +16,19 @@
     <title>Math For All</title>
 
     <!-- Favicon -->
-    <link rel="icon" type="image/ico" href="./img/logo.ico"/>
+    <link rel="icon" type="image/ico" href="./img/logo.ico" />
 </head>
 
 <body>
-    <div class = "nav-container">
+    <div class="nav-container">
         <nav class="navbar sticky navbar-expand-lg navbar-dark" style="background-color: #000000;">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#">
                     <img src="./img/logo sin bordes MFA.png" width="50" height="55" alt="">
                 </a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
+                    aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
@@ -43,7 +46,7 @@
         </nav>
     </div>
 
-    
+
     <div id="title-container">
         <h1 id="title">Math For All</h1>
     </div>
@@ -52,7 +55,7 @@
         <!--Primaria -->
         <div class="card">
             <img src="./img/primaria.jpg" alt="Primaria">
-            <div class = "card-text">
+            <div class="card-text">
                 <h4>Clases para Primaria</h4>
                 <p>Todos los grados! Clases de matemáaticas, español e inglés</p>
             </div>
@@ -61,7 +64,7 @@
         <!-- Secundaria -->
         <div class="card">
             <img src="./img/secundaria.jpg" alt="Secundaria">
-            <div class = "card-text">
+            <div class="card-text">
                 <h4>Clases para Secundaria</h4>
                 <p>Todos los grados! Dias sábados de 8:00am a 10:00am</p>
             </div>
@@ -70,7 +73,7 @@
         <!-- Examen de admision -->
         <div class="card">
             <img src="./img/examen.jpg" alt="Secundaria">
-            <div class = "card-text">
+            <div class="card-text">
                 <h4>Preparación para Examen de Admisión</h4>
                 <p>Todos los grados! Dias sábados de 8:00am a 10:00am</p>
             </div>
@@ -79,7 +82,7 @@
         <!-- Calculo -->
         <div class="card">
             <img src="./img/photo (1).jpg" alt="ia">
-            <div class = "card-text">
+            <div class="card-text">
                 <h4>Clases Universitarias</h4>
                 <p>Todos los grados! Dias sábados de 8:00am a 10:00am</p>
             </div>
@@ -88,7 +91,7 @@
         <!-- Programacion -->
         <div class="card">
             <img src="./img/photo (1).jpg" alt="Clases para pimaria">
-            <div class = "card-text">
+            <div class="card-text">
                 <h4>Cursos Libres</h4>
                 <p>Todos los grados! Dias sábados de 8:00am a 10:00am</p>
             </div>
@@ -99,17 +102,19 @@
     <div id="title-container">
         <h1 id="title">¿Quiénes somos?</h1>
     </div>
-    <div class = "container_quienes_somos" id = "section_quienes_somos">
-        <img id = "quienes_somos" src="./img/quienes_somos.jpg" alt="Equipo MFA">
+    <div class="container_quienes_somos" id="section_quienes_somos">
+        <img id="quienes_somos" src="./img/quienes_somos.jpg" alt="Equipo MFA">
     </div>
-    <div class = "Ptext">
-        Somos un centro de entrenamiento donde podrás aprender matemática, física, química, inglés, programación, prepararte para tu examen de admisión y mucho más de una manera fácil y divertida.
+    <div class="Ptext">
+        Somos un centro de entrenamiento donde podrás aprender matemática, física, química, inglés, programación,
+        prepararte para tu examen de admisión y mucho más de una manera fácil y divertida.
     </div>
-    <div class = "Ptext">
-        Nuestro método de enseñanza se diferencia del resto de centros y colegios por que le damos un enfoque diferente a nuestras clases para acercarnos más a cada estudiante.
+    <div class="Ptext">
+        Nuestro método de enseñanza se diferencia del resto de centros y colegios por que le damos un enfoque diferente
+        a nuestras clases para acercarnos más a cada estudiante.
     </div>
-    <div class = "container_btn_equipo">
-            <a href="equipo.html" class = "btn_estilo">Equipo<a>
+    <div class="container_btn_equipo">
+        <a href="equipo.html" class="btn_estilo">Equipo<a>
     </div>
 
 
@@ -118,24 +123,29 @@
     <div id="title-container">
         <h1 id="title">Dirección</h1>
     </div>
-    <div class = "Ptext">
+    <div class="Ptext">
         Nos encontramos de donde fue el ranchón de la alcaldía de managua, una cuadra y media al sur.
     </div>
     <!-- Utilizar display: block si sale la linea blanca -->
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3900.765995878386!2d-86.29871848518661!3d12.128156991413112!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8f7155f58f83369d%3A0xbc21c9c43f22c520!2sMath%20For%20All!5e0!3m2!1ses!2sni!4v1678113994480!5m2!1ses!2sni" width="100%" height="450" style = "display: block;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    <iframe
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3900.765995878386!2d-86.29871848518661!3d12.128156991413112!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8f7155f58f83369d%3A0xbc21c9c43f22c520!2sMath%20For%20All!5e0!3m2!1ses!2sni!4v1678113994480!5m2!1ses!2sni"
+        width="100%" height="450" style="display: block;" allowfullscreen="" loading="lazy"
+        referrerpolicy="no-referrer-when-downgrade"></iframe>
 
     <!-- Footer -->
-    
-    <div class = "footer_container">
-        <div class = "footer_main">
-                Copyrirht @Math For All 2023
+
+    <div class="footer_container">
+        <div class="footer_main">
+            Copyrirht @Math For All 2023
         </div>
     </div>
 
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
