Galeria de clasificados

--- a/clasificados.html
+++ b/clasificados.html
@@ -35,10 +35,10 @@
                     <div class="navbar-nav ms-auto">
                         <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
                         <!--<a class="nav-link active" aria-current="page" href="#">Inicio</a>-->
-                        <a class="nav-link" href="#section_quienes_somos">¿Quiénes somos?</a>
-                        <a class="nav-link" href="#">Dirección</a>
-                        <a class="nav-link" href="#">Cursos</a>
-                        <a class="nav-link" href="#">Clasificados Examen de Admision</a>
+                        <a class="nav-link" href="index.html#section_quienes_somos">¿Quiénes somos?</a>
+                        <a class="nav-link" href="index.html#direccion">Dirección</a>
+                        <a class="nav-link" href="cursos.html">Cursos</a>
+                        <a class="nav-link" href="clasificados.html">Clasificados Examen de Admision</a>
                         <!--<a class="nav-link disabled">Deshabilitado</a>-->
                     </div>
                 </div>
@@ -51,7 +51,86 @@
         <h1 id="title">Clasificados UNI 2023</h1>
     </div>
 
-    
+
+    <div class = "gallery">
+        <img class = "img_gallery" src="./img/clasificados/general/1.jpg">
+        <img class = "img_gallery" src="./img/clasificados/general/2.jpg">
+        <img class = "img_gallery" src="./img/clasificados/general/3.jpg">
+        <img class = "img_gallery" src="./img/clasificados/general/4.jpg">
+        <img class = "img_gallery" src="./img/clasificados/general/5.jpg">
+        <img class = "img_gallery" src="./img/clasificados/general/6.jpg">
+        <img class = "img_gallery" src="./img/clasificados/general/7.jpg">
+        <img class = "img_gallery" src="./img/clasificados/general/8.jpg">
+        <img class = "img_gallery" src="./img/clasificados/general/9.jpg">
+        <img class = "img_gallery" src= "./img/clasificados/c (1).jpg">
+        <img class = "img_gallery" src= "./img/clasificados/c (2).jpg">
+        <img class = "img_gallery" src= "./img/clasificados/c (3).jpg">
+        <img class = "img_gallery" src= "./img/clasificados/c (4).jpg">
+        <img class = "img_gallery" src= "./img/clasificados/c (5).jpg">
+        <img class = "img_gallery" src= "./img/clasificados/c (6).jpg">
+        <img class = "img_gallery" src= "./img/clasificados/c (7).jpg">
+        <img class = "img_gallery" src= "./img/clasificados/c (8).jpg">
+        <img class = "img_gallery" src= "./img/clasificados/c (9).jpg">
+        <img class = "img_gallery" src= "./img/clasificados/c (10).jpg">
+        <img class = "img_gallery" src= "./img/clasificados/c (11).jpg">
+        <img class = "img_gallery" src= "./img/clasificados/c (12).jpg">
+        <img class = "img_gallery" src= "./img/clasificados/c (13).jpg">
+        <img class = "img_gallery" src= "./img/clasificados/c (14).jpg">
+        <img class = "img_gallery" src= "./img/clasificados/c (15).jpg">
+        <img class = "img_gallery" src= "./img/clasificados/c (16).jpg">
+        <img class = "img_gallery" src= "./img/clasificados/c (17).jpg">
+        <img class = "img_gallery" src= "./img/clasificados/c (18).jpg">
+        <img class = "img_gallery" src= "./img/clasificados/c (19).jpg">
+        <img class = "img_gallery" src= "./img/clasificados/c (20).jpg">
+        <img class = "img_gallery" src= "./img/clasificados/c (21).jpg">
+        <img class = "img_gallery" src= "./img/clasificados/c (22).jpg">
+        <img class = "img_gallery" src= "./img/clasificados/c (23).jpg">
+        <img class = "img_gallery" src= "./img/clasificados/c (24).jpg">
+        <img class = "img_gallery" src= "./img/clasificados/c (25).jpg">
+        <img class = "img_gallery" src= "./img/clasificados/c (26).jpg">
+        <img class = "img_gallery" src= "./img/clasificados/c (27).jpg">
+        <img class = "img_gallery" src= "./img/clasificados/c (28).jpg">
+        <img class = "img_gallery" src= "./img/clasificados/c (29).jpg">
+        <img class = "img_gallery" src= "./img/clasificados/c (30).jpg">
+        <img class = "img_gallery" src= "./img/clasificados/c (31).jpg">
+        <img class = "img_gallery" src= "./img/clasificados/c (32).jpg">
+        <img class = "img_gallery" src= "./img/clasificados/c (33).jpg">
+        <img class = "img_gallery" src= "./img/clasificados/c (34).jpg">
+        <img class = "img_gallery" src= "./img/clasificados/c (35).jpg">
+        <img class = "img_gallery" src= "./img/clasificados/c (36).jpg">
+        <img class = "img_gallery" src= "./img/clasificados/c (37).jpg">
+        <img class = "img_gallery" src= "./img/clasificados/c (38).jpg">
+        <img class = "img_gallery" src= "./img/clasificados/c (39).jpg">
+        <img class = "img_gallery" src= "./img/clasificados/c (40).jpg">
+        <img class = "img_gallery" src= "./img/clasificados/c (41).jpg">
+        <img class = "img_gallery" src= "./img/clasificados/c (42).jpg">
+        <img class = "img_gallery" src= "./img/clasificados/c (43).jpg">
+        <img class = "img_gallery" src= "./img/clasificados/c (44).jpg">
+        <img class = "img_gallery" src= "./img/clasificados/c (45).jpg">
+        <img class = "img_gallery" src= "./img/clasificados/c (46).jpg">
+        <img class = "img_gallery" src= "./img/clasificados/c (47).jpg">
+        <img class = "img_gallery" src= "./img/clasificados/c (48).jpg">
+        <img class = "img_gallery" src= "./img/clasificados/c (49).jpg">
+        <img class = "img_gallery" src= "./img/clasificados/c (50).jpg">
+        <img class = "img_gallery" src= "./img/clasificados/c (51).jpg">
+        <img class = "img_gallery" src= "./img/clasificados/c (52).jpg">
+        <img class = "img_gallery" src= "./img/clasificados/c (53).jpg">
+        <img class = "img_gallery" src= "./img/clasificados/c (54).jpg">
+        <img class = "img_gallery" src= "./img/clasificados/c (55).jpg">
+        <img class = "img_gallery" src= "./img/clasificados/c (56).jpg">
+        <img class = "img_gallery" src= "./img/clasificados/c (57).jpg">
+        <img class = "img_gallery" src= "./img/clasificados/c (58).jpg">
+        <img class = "img_gallery" src= "./img/clasificados/c (59).jpg">
+        <img class = "img_gallery" src= "./img/clasificados/c (60).jpg">
+        <img class = "img_gallery" src= "./img/clasificados/c (61).jpg">
+        <img class = "img_gallery" src= "./img/clasificados/c (62).jpg">
+        <img class = "img_gallery" src= "./img/clasificados/c (63).jpg">
+        <img class = "img_gallery" src= "./img/clasificados/c (64).jpg">
+        <img class = "img_gallery" src= "./img/clasificados/c (65).jpg">
+        <img class = "img_gallery" src= "./img/clasificados/c (66).jpg">
+        <img class = "img_gallery" src= "./img/clasificados/c (67).jpg">
+        <img class = "img_gallery" src= "./img/clasificados/c (68).jpg">
+    </div>
 
 
     <!-- Footer -->
