--- a/cursos.html
+++ b/cursos.html
@@ -35,10 +35,10 @@
                     <div class="navbar-nav ms-auto">
                         <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
                         <!--<a class="nav-link active" aria-current="page" href="#">Inicio</a>-->
-                        <a class="nav-link" href="#section_quienes_somos">¿Quiénes somos?</a>
-                        <a class="nav-link" href="#">Dirección</a>
-                        <a class="nav-link" href="#">Cursos</a>
-                        <a class="nav-link" href="#">Clasificados Examen de Admision</a>
+                        <a class="nav-link" href="index.html#section_quienes_somos">¿Quiénes somos?</a>
+                        <a class="nav-link" href="index.html#direccion">Dirección</a>
+                        <a class="nav-link" href="cursos.html">Cursos</a>
+                        <a class="nav-link" href="clasificados.html">Clasificados Examen de Admision</a>
                         <!--<a class="nav-link disabled">Deshabilitado</a>-->
                     </div>
                 </div>
@@ -202,6 +202,7 @@
         <img src="./img/primaria.jpg" alt="">
         <img src="./img/primaria.jpg" alt="">
         <img src="./img/primaria.jpg" alt="">
+        <img src="./img/clasificados/c (1).jpg" alt="">
     </section>
 
     <div class="container_btn_resultados">
