--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
                     <div class="navbar-nav ms-auto">
                         <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
                         <!--<a class="nav-link active" aria-current="page" href="#">Inicio</a>-->
-                        <a class="nav-link" href="#section_quienes_somos">¿Quiénes somos?</a>
-                        <a class="nav-link" href="#">Dirección</a>
+                        <a class="nav-link" href="index.html#section_quienes_somos">¿Quiénes somos?</a>
+                        <a class="nav-link" href="index.html#direccion">Dirección</a>
                         <a class="nav-link" href="cursos.html">Cursos</a>
-                        <a class="nav-link" href="#">Clasificados Examen de Admision</a>
+                        <a class="nav-link" href="clasificados.html">Clasificados Examen de Admision</a>
                         <!--<a class="nav-link disabled">Deshabilitado</a>-->
                     </div>
                 </div>
@@ -120,17 +120,19 @@
 
 
     <!-- Direccion -->
-    <div id="title-container">
-        <h1 id="title">Dirección</h1>
+    <div id="direccion">
+        <div id="title-container">
+            <h1 id="title">Dirección</h1>
+        </div>
+        <div class="Ptext">
+            Nos encontramos de donde fue el ranchón de la alcaldía de managua, una cuadra y media al sur.
+        </div>
+        <!-- Utilizar display: block si sale la linea blanca -->
+        <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3900.765995878386!2d-86.29871848518661!3d12.128156991413112!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8f7155f58f83369d%3A0xbc21c9c43f22c520!2sMath%20For%20All!5e0!3m2!1ses!2sni!4v1678113994480!5m2!1ses!2sni"
+            width="100%" height="450" style="display: block;" allowfullscreen="" loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"></iframe>
     </div>
-    <div class="Ptext">
-        Nos encontramos de donde fue el ranchón de la alcaldía de managua, una cuadra y media al sur.
-    </div>
-    <!-- Utilizar display: block si sale la linea blanca -->
-    <iframe
-        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3900.765995878386!2d-86.29871848518661!3d12.128156991413112!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8f7155f58f83369d%3A0xbc21c9c43f22c520!2sMath%20For%20All!5e0!3m2!1ses!2sni!4v1678113994480!5m2!1ses!2sni"
-        width="100%" height="450" style="display: block;" allowfullscreen="" loading="lazy"
-        referrerpolicy="no-referrer-when-downgrade"></iframe>
 
     <!-- Footer -->
 
