Mejorando el inicio de index.html

--- a/cursos.html
+++ b/cursos.html
@@ -33,11 +33,11 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                     <div class="navbar-nav ms-auto">
-                        <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
+                        <a class="nav-link" aria-current="page" href="index.html">Inicio</a>
                         <!--<a class="nav-link active" aria-current="page" href="#">Inicio</a>-->
                         <a class="nav-link" href="index.html#section_quienes_somos">¿Quiénes somos?</a>
                         <a class="nav-link" href="index.html#direccion">Dirección</a>
-                        <a class="nav-link" href="cursos.html">Cursos</a>
+                        <a class="nav-link active" href="cursos.html">Cursos</a>
                         <a class="nav-link" href="clasificados.html">Clasificados Examen de Admision</a>
                         <!--<a class="nav-link disabled">Deshabilitado</a>-->
                     </div>
