--- a/index.html
+++ b/index.html
@@ -46,9 +46,26 @@
         </nav>
     </div>
 
-
-    <div id="title-container">
-        <h1 id="title">Math For All</h1>
+    <div class = "inicio">
+        <div class = "inicio_medio1">
+            <div id="title-container">
+                <img  class = "imagen_inicio" src="./img/inicio.png" alt="imagen representativa de MFA">
+            </div>
+        </div>
+        <div class = "inicio_medio2">
+            <div class = "right-inicio-container">
+                <div id="title-container">
+                    <h1 id="title_inicio">Math For All</h1>
+                </div>
+    
+                <div class = "Ptext">
+                    ¿Estas list@ para ser la mejor versión de ti? Estudia con nosotros
+                </div>
+                <div class="container_btn_equipo">
+                    <a href="cursos.html" class="btn_estilo">Nuestros Cursos<a>
+                </div>
+            </div>
+        </div>
     </div>
 
     <div class="card-container">
