Implementación de media queries para la pantalla index.html

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             <img src="./img/primaria.jpg" alt="Primaria">
             <div class="card-text">
                 <h4>Clases para Primaria</h4>
-                <p>Todos los grados! Clases de matemáaticas, español e inglés</p>
+                <p>Todos los grados! Clases de matemáaticas, español e inglés.</p>
             </div>
         </div>
 
@@ -92,7 +92,7 @@
             <img src="./img/examen.jpg" alt="Secundaria">
             <div class="card-text">
                 <h4>Preparación para Examen de Admisión</h4>
-                <p>Todos los grados! Dias sábados de 8:00am a 10:00am</p>
+                <p>Te preparamos para que hagas tu examen de admisión en la UNI o en la UCA.</p>
             </div>
         </div>
 
