se agrego contenido en equipo.html

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             </div>
         </nav>
     </div>
-
+<!--
     <div class = "inicio">
         <div class = "inicio_medio1">
             <div id="title-container">
@@ -67,6 +67,27 @@
             </div>
         </div>
     </div>
+-->
+
+<div class="container-fluid text-center">
+    <div class="row">
+      <div class="col">
+        <img  class = "imagen_inicio" src="./img/inicio.png" alt="imagen representativa de MFA">
+      </div>
+      <div class="col">
+        <div id="title-container">
+            <h1 id="title_inicio">Math For All</h1>
+        </div>
+
+        <div class = "Ptext">
+            ¿Estas list@ para ser la mejor versión de ti? Estudia con nosotros
+        </div>
+        <div class="container_btn_equipo">
+            <a href="cursos.html" class="btn_estilo">Nuestros Cursos<a>
+        </div>
+      </div>
+    </div>
+  </div>
 
     <div class="card-container">
         <!--Primaria -->
