--- a/equipo.html
+++ b/equipo.html
@@ -7,49 +7,133 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
     <!-- CSS -->
     <link href="./css/style.css" rel="stylesheet">
+    <link href="./css/style_s.css" rel="stylesheet">
     <title>Math For All</title>
 
     <!-- Favicon -->
-    <link rel="icon" type="image/ico" href="./img/logo.ico"/>
+    <link rel="icon" type="image/ico" href="./img/logo.ico" />
 </head>
 
 <body>
-    <div class = "nav-container">
-        <nav class="navbar sticky-top navbar-expand-lg navbar-dark" style="background-color: #000000;">
+    <div class="nav-container">
+        <nav class="navbar sticky navbar-expand-lg navbar-dark" style="background-color: #000000;">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#">
                     <img src="./img/logo sin bordes MFA.png" width="50" height="55" alt="">
                 </a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
+                    aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                     <div class="navbar-nav ms-auto">
                         <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
                         <!--<a class="nav-link active" aria-current="page" href="#">Inicio</a>-->
-                        <a class="nav-link" href="#">Cursos</a>
-                        <a class="nav-link" href="#">Dirección</a>
-                        <a class="nav-link" href="#">Clasificados Examen de Admision</a>
+                        <a class="nav-link" href="index.html#section_quienes_somos">¿Quiénes somos?</a>
+                        <a class="nav-link" href="index.html#direccion">Dirección</a>
+                        <a class="nav-link" href="cursos.html">Cursos</a>
+                        <a class="nav-link" href="clasificados.html">Clasificados Examen de Admision</a>
                         <!--<a class="nav-link disabled">Deshabilitado</a>-->
                     </div>
                 </div>
             </div>
         </nav>
     </div>
-
-    
     <div id="title-container">
         <h1 id="title">Equipo</h1>
+    </div>
+
+    <div class="Ptext">
+        No somos profesores, o al menos no estudiamos ninguna carrera a fin a la educación, somos un grupo de ingenieros y estudiantes de ingeniería.
+    </div>
+
+    <div class = "Ptext">
+        ¿Qué nos hace únicos?
+    </div>
+
+    <div class = "Ptext">
+        Enseñamos como nos hubiese gustado que nos enseñaran.
+    </div>
+
+    <div class="card-container">
+
+        <div class="card">
+            <img src="./img/primaria.jpg" alt="Primaria">
+            <div class="card-text">
+                <h4>Ing. Carlos Emilio Aburto Medrano</h4>
+                <h4>Director</h4>
+            </div>
+        </div>
+
+        <div class="card">
+            <img src="./img/secundaria.jpg" alt="Secundaria">
+            <div class="card-text">
+                <h4>Ing. Guillermo Espino</h4>
+                <h4>Docente</h4>
+            </div>
+        </div>
+
+        <div class="card">
+            <img src="./img/examen.jpg" alt="Secundaria">
+            <div class="card-text">
+                <h4>Kevin Steven Aguilar</h4>
+                <h4>Docente Ayudante</h4>
+            </div>
+        </div>
+        
+        <div class="card">
+            <img src="./img/photo (1).jpg" alt="ia">
+            <div class="card-text">
+                <h4>Aarón Rafael Quintero Espino</h4>
+                <h4>Docente Ayudante</h4>
+            </div>
+        </div>
+
+        <div class="card">
+            <img src="./img/photo (1).jpg" alt="Clases para pimaria">
+            <div class="card-text">
+                <h4>Felipe Gabriel Rodriguez Cordonero</h4>
+                <h4>Docente Ayudante</h4>
+            </div>
+        </div>
+
+        <div class="card">
+            <img src="./img/photo (1).jpg" alt="Clases para pimaria">
+            <div class="card-text">
+                <h4>Melissa Isamar Bosques Soza</h4>
+                <h4>Docente Ayudante</h4>
+            </div>
+        </div>
+
+        <div class="card">
+            <img src="./img/photo (1).jpg" alt="Clases para pimaria">
+            <div class="card-text">
+                <h4>Weychen Eng Cuadrado</h4>
+                <h4>Docente Ayudante</h4>
+            </div>
+        </div>
+    </div>
+
+    <!-- Footer -->
+
+    <div class="footer_container">
+        <div class="footer_main">
+            Copyrirht @Math For All 2023
+        </div>
     </div>
 
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
