mejoras en el tamaño de las cards

--- a/equipo.html
+++ b/equipo.html
@@ -82,7 +82,7 @@
         <div class="card">
             <img src="./img/examen.jpg" alt="Secundaria">
             <div class="card-text">
-                <h4>Kevin Steven Aguilar</h4>
+                <h4>Br. Kevin Steven Aguilar</h4>
                 <h4>Docente Ayudante</h4>
             </div>
         </div>
@@ -90,7 +90,7 @@
         <div class="card">
             <img src="./img/photo (1).jpg" alt="ia">
             <div class="card-text">
-                <h4>Aarón Rafael Quintero Espino</h4>
+                <h4>Br. Aarón Rafael Quintero Espino</h4>
                 <h4>Docente Ayudante</h4>
             </div>
         </div>
@@ -98,7 +98,7 @@
         <div class="card">
             <img src="./img/photo (1).jpg" alt="Clases para pimaria">
             <div class="card-text">
-                <h4>Felipe Gabriel Rodriguez Cordonero</h4>
+                <h4>Br. Felipe Gabriel Rodriguez Cordonero</h4>
                 <h4>Docente Ayudante</h4>
             </div>
         </div>
@@ -106,7 +106,7 @@
         <div class="card">
             <img src="./img/photo (1).jpg" alt="Clases para pimaria">
             <div class="card-text">
-                <h4>Melissa Isamar Bosques Soza</h4>
+                <h4>Br. Melissa Isamar Bosques Soza</h4>
                 <h4>Docente Ayudante</h4>
             </div>
         </div>
@@ -114,7 +114,7 @@
         <div class="card">
             <img src="./img/photo (1).jpg" alt="Clases para pimaria">
             <div class="card-text">
-                <h4>Weychen Eng Cuadrado</h4>
+                <h4>Br. Weychen Eng Cuadrado</h4>
                 <h4>Docente Ayudante</h4>
             </div>
         </div>
