se colocaron las imagenes que hacían falta en index.html, equipo.html y cursos.html

--- a/cursos.html
+++ b/cursos.html
@@ -109,12 +109,12 @@
         </div>
     </div>
     <section>
-        <img src="./img/primaria.jpg" alt="">
-        <img src="./img/primaria.jpg" alt="">
-        <img src="./img/primaria.jpg" alt="">
-        <img src="./img/primaria.jpg" alt="">
-        <img src="./img/primaria.jpg" alt="">
-        <img src="./img/primaria.jpg" alt="">
+        <img src="./img/secundaria/1.jpg" alt="">
+        <img src="./img/secundaria/2.jpg" alt="">
+        <img src="./img/secundaria/3.jpg" alt="">
+        <img src="./img/secundaria/4.jpg" alt="">
+        <img src="./img/secundaria/5.jpg" alt="">
+        <img src="./img/secundaria/6.jpg" alt="">
     </section>
 
     <!-- Examen de admision -->
@@ -196,13 +196,13 @@
     </div>
 
     <section>
-        <img src="./img/primaria.jpg" alt="">
-        <img src="./img/primaria.jpg" alt="">
-        <img src="./img/primaria.jpg" alt="">
-        <img src="./img/primaria.jpg" alt="">
-        <img src="./img/primaria.jpg" alt="">
-        <img src="./img/primaria.jpg" alt="">
-        <img src="./img/clasificados/c (1).jpg" alt="">
+        <img src="./img/admision/1.jpg" alt="">
+        <img src="./img/admision/2.jpg" alt="">
+        <img src="./img/admision/3.jpg" alt="">
+        <img src="./img/admision/4.jpg" alt="">
+        <img src="./img/admision/5.jpg" alt="">
+        <img src="./img/admision/6.jpg" alt="">
+        <img src="./img/admision/7.jpg" alt="">
     </section>
 
     <div class="container_btn_resultados">
@@ -229,12 +229,12 @@
     </div>
 
     <section>
-        <img src="./img/primaria.jpg" alt="">
-        <img src="./img/primaria.jpg" alt="">
-        <img src="./img/primaria.jpg" alt="">
-        <img src="./img/primaria.jpg" alt="">
-        <img src="./img/primaria.jpg" alt="">
-        <img src="./img/primaria.jpg" alt="">
+        <img src="./img/cursos/1.jpg" alt="">
+        <img src="./img/cursos/2.jpg" alt="">
+        <img src="./img/cursos/3.jpg" alt="">
+        <img src="./img/cursos/4.jpg" alt="">
+        <img src="./img/cursos/5.jpg" alt="">
+        <img src="./img/cursos/6.jpg" alt="">
     </section>
 
 
