--- a/equipo.html
+++ b/equipo.html
@@ -64,7 +64,7 @@
     <div class="card-container">
 
         <div class="card">
-            <img src="./img/primaria.jpg" alt="Primaria">
+            <img src="./img/equipo/carlos.jpg" alt="Ing. Carlos Aburto">
             <div class="card-text">
                 <h4>Ing. Carlos Emilio Aburto Medrano</h4>
                 <h4>Director</h4>
@@ -72,15 +72,15 @@
         </div>
 
         <div class="card">
-            <img src="./img/secundaria.jpg" alt="Secundaria">
+            <img src="./img/equipo/espino.jpg" alt="Ing. Guillermo Espino">
             <div class="card-text">
-                <h4>Ing. Guillermo Espino</h4>
+                <h4>Ing. Guillermo Francisco Espino Collado</h4>
                 <h4>Docente</h4>
             </div>
         </div>
 
         <div class="card">
-            <img src="./img/examen.jpg" alt="Secundaria">
+            <img src="./img/equipo/kevin.jpg" alt="Br. Kevin Aguilar">
             <div class="card-text">
                 <h4>Br. Kevin Steven Aguilar</h4>
                 <h4>Docente Ayudante</h4>
@@ -88,7 +88,7 @@
         </div>
         
         <div class="card">
-            <img src="./img/photo (1).jpg" alt="ia">
+            <img src="./img/equipo/aaron.jpg" alt="Br. Aarón Quintero">
             <div class="card-text">
                 <h4>Br. Aarón Rafael Quintero Espino</h4>
                 <h4>Docente Ayudante</h4>
@@ -96,7 +96,7 @@
         </div>
 
         <div class="card">
-            <img src="./img/photo (1).jpg" alt="Clases para pimaria">
+            <img src="./img/equipo/felipe.jpg" alt="Br. Felipe Rodriguez">
             <div class="card-text">
                 <h4>Br. Felipe Gabriel Rodriguez Cordonero</h4>
                 <h4>Docente Ayudante</h4>
@@ -104,7 +104,7 @@
         </div>
 
         <div class="card">
-            <img src="./img/photo (1).jpg" alt="Clases para pimaria">
+            <img src="./img/equipo/melissa.jpg" alt="Br. Melissa Bosques">
             <div class="card-text">
                 <h4>Br. Melissa Isamar Bosques Soza</h4>
                 <h4>Docente Ayudante</h4>
@@ -112,7 +112,7 @@
         </div>
 
         <div class="card">
-            <img src="./img/photo (1).jpg" alt="Clases para pimaria">
+            <img src="./img/equipo/weychen.jpg" alt="Br. Eng Cuadrado">
             <div class="card-text">
                 <h4>Br. Weychen Eng Cuadrado</h4>
                 <h4>Docente Ayudante</h4>
