--- a/index.html
+++ b/index.html
@@ -119,19 +119,19 @@
 
         <!-- Calculo -->
         <div class="card">
-            <img src="./img/photo (1).jpg" alt="ia">
+            <img src="./img/cursos/3.jpg" alt="ia">
             <div class="card-text">
                 <h4>Clases Universitarias</h4>
-                <p>Todos los grados! Dias sábados de 8:00am a 10:00am</p>
+                <p>Cálculo, Física, Química y más!</p>
             </div>
         </div>
 
         <!-- Programacion -->
         <div class="card">
-            <img src="./img/photo (1).jpg" alt="Clases para pimaria">
+            <img src="./img/programacion.jpg" alt="Clases de programacion">
             <div class="card-text">
-                <h4>Cursos Libres</h4>
-                <p>Todos los grados! Dias sábados de 8:00am a 10:00am</p>
+                <h4>Programación</h4>
+                <p>Clases de C, C++, JAVA, python, lo que necesites!</p>
             </div>
         </div>
     </div>
@@ -144,13 +144,12 @@
         <img id="quienes_somos" src="./img/quienes_somos.jpg" alt="Equipo MFA">
     </div>
     <div class="Ptext">
-        Somos un centro de entrenamiento donde podrás aprender matemática, física, química, inglés, programación,
-        prepararte para tu examen de admisión y mucho más de una manera fácil y divertida.
+        Somos un centro de entrenamiento innovador que te brinda la oportunidad de aprender matemática, física, química, inglés, programación y prepararte para tu examen de admisión de una manera fácil, divertida y única.
     </div>
-    <div class="Ptext">
-        Nuestro método de enseñanza se diferencia del resto de centros y colegios por que le damos un enfoque diferente
-        a nuestras clases para acercarnos más a cada estudiante.
+    <div class = "Ptext">
+        Nos destacamos por nuestra metodología de enseñanza diferenciada que se adapta a cada estudiante, acercándonos a ellos de manera personalizada. ¿Estás listo para aprender y descubrir algo nuevo de una forma emocionante? ¡Ven y únete a nuestra comunidad de aprendizaje!
     </div>
+
     <div class="container_btn_equipo">
         <a href="equipo.html" class="btn_estilo">Equipo<a>
     </div>
